--- a/package.json
+++ b/package.json
@@ -2,18 +2,25 @@
     "name": "dwarvesforge-thorin-snippets",
     "displayName": "Dwarvesforge Thorin Snippets",
     "description": "Dwarvesforge Thorin Visual Studio Code Snippets",
-    "version": "1.1.11",
+    "version": "1.1.12",
     "publisher": "Dwarvesforge",
+    "icon": ".resources/icon.png",
+    "main": "snippets/snippets.json",
     "repository": {
         "type": "git",
         "url": "https://github.com/Dwarvesforge/thorin-vsce-snippets-extension"
     },
+    "license": "SEE LICENSE IN LICENSE",
     "engines": {
         "vscode": "^1.29.0"
     },
     "categories": [
         "Snippets"
     ],
+    "galleryBanner": {
+        "color": "#d6a727",
+        "theme": "dark"
+    },
     "contributes": {
         "snippets": [
             {
